--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,5 @@ RewriteEngine On
 RewriteBase /
 RewriteRule ^schiffbruch$ index.html
 RewriteRule ^cannonhill$ index.html
+RewriteRule ^scapemaker index.html
 RewriteRule ^impressum$ index.html
