Submenu and file structure

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
 RewriteEngine On
 RewriteBase /
-RewriteRule ^schiffbruch$ index.html
-RewriteRule ^cannonhill$ index.html
-RewriteRule ^scapemaker index.html
 RewriteRule ^impressum$ index.html
+RewriteRule ^games/ index.html
+RewriteRule ^tools/ index.html
+
+Redirect 301 /schiffbruch http://www.dplate.de/games/schiffbruch
+Redirect 301 /cannonhill http://www.dplate.de/games/cannonhill
+Redirect 301 /scapemaker http://www.dplate.de/tools/scapemaker
+Redirect 301 /java.html http://www.dplate.de
