--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
     "polymer": "Polymer/polymer#^1.6.0",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-item": "PolymerElements/paper-item#^1.2.1"
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "iron-ajax": "PolymerElements/iron-ajax#^1.4.3"
   }
 }
