--- a/.htaccess
+++ b/.htaccess
@@ -7,8 +7,12 @@ RewriteRule ^tools/ index.html
 
 ErrorDocument 404 /404
 
+Redirect 301 /start http://www.dplate.de
 Redirect 301 /schiffbruch http://www.dplate.de/games/schiffbruch
 Redirect 301 /cannonhill http://www.dplate.de/games/cannonhill
 Redirect 301 /scapemaker http://www.dplate.de/tools/scapemaker
+Redirect 301 /schiffbruch/ http://www.dplate.de/games/schiffbruch
+Redirect 301 /cannonhill/ http://www.dplate.de/games/cannonhill
+Redirect 301 /scapemaker/ http://www.dplate.de/tools/scapemaker
 Redirect 301 /java.html http://www.dplate.de
 Redirect 301 /javae.html http://www.dplate.de
