--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-styled-components": "^1.0.2",
     "gatsby-source-filesystem": "^1.4.2",
     "gatsby-transformer-json": "^1.0.2",
+    "react-disqus-comments-sso": "github:etanlubeck/react-disqus-comments-sso",
     "react-helmet": "^5.1.3",
     "react-load-script": "0.0.6"
   }
