--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Logs
 logs
 *.log
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
@@ -60,3 +59,5 @@ typings/
 .cache/
 public
 .idea
+
+static/photos/
