--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^1.8.11",
-    "gatsby-link": "^1.6.7",
-    "gatsby-plugin-google-analytics": "^1.0.4",
-    "gatsby-plugin-react-helmet": "^1.0.4",
-    "gatsby-plugin-styled-components": "^1.0.2",
-    "gatsby-source-filesystem": "^1.4.2",
-    "gatsby-transformer-json": "^1.0.2",
+    "gatsby": "^1.9.108",
+    "gatsby-link": "^1.6.26",
+    "gatsby-plugin-google-analytics": "^1.0.12",
+    "gatsby-plugin-react-helmet": "^1.0.8",
+    "gatsby-plugin-styled-components": "^2.0.2",
+    "gatsby-source-filesystem": "^1.5.8",
+    "gatsby-transformer-json": "^1.0.12",
     "react-disqus-comments-sso": "github:etanlubeck/react-disqus-comments-sso",
-    "react-helmet": "^5.1.3",
-    "react-load-script": "0.0.6"
+    "react-helmet": "^5.2.0",
+    "react-load-script": "0.0.6",
+    "styled-components": "^2.2.3"
   },
   "devDependencies": {
     "gm": "1.23.0"
