--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^1.9.108",
-    "gatsby-link": "^1.6.26",
-    "gatsby-plugin-google-analytics": "^1.0.12",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-styled-components": "^2.0.2",
-    "gatsby-source-filesystem": "^1.5.8",
-    "gatsby-transformer-json": "^1.0.12",
-    "react-helmet": "^5.2.0",
-    "react-load-script": "0.0.6",
-    "styled-components": "^2.2.3"
+    "gatsby": "^2.8.6",
+    "gatsby-plugin-google-analytics": "^2.0.20",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-source-filesystem": "^2.0.38",
+    "gatsby-transformer-json": "^2.1.11",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-load-script": "^0.0.6",
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "gm": "1.23.0"
