--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-load-script": "^0.0.6",
+    "react-motion": "^0.5.2",
     "styled-components": "^4.3.1"
   },
   "devDependencies": {
-    "gm": "1.23.0"
+    "gm": "1.23.0",
+    "timecut": "^0.1.4"
   }
 }
