--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
     "copy-webpack-plugin": "^6.4.1",
-    "gm": "1.23.1"
+    "gm": "1.23.1",
+    "strip-pragma-loader": "^1.0.0"
   }
 }
