--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@hot-loader/react-dom": "^17.0.1",
     "copy-webpack-plugin": "^6.4.1",
     "gm": "1.23.1",
+    "image-size": "^0.9.3",
+    "jpeg-exif": "^1.1.4",
+    "luxon": "^1.25.0",
     "strip-pragma-loader": "^1.0.0"
   }
 }
