--- a/package.json
+++ b/package.json
@@ -6,25 +6,24 @@
   },
   "dependencies": {
     "cesium": "^1.76.0",
-    "gatsby": "^2.29.2",
-    "gatsby-plugin-google-analytics": "^2.8.0",
-    "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-styled-components": "^3.7.0",
-    "gatsby-source-filesystem": "^2.8.1",
-    "gatsby-transformer-json": "^2.8.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby": "^3.9.1",
+    "gatsby-plugin-google-analytics": "3.9.0",
+    "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-styled-components": "^4.9.0",
+    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-transformer-json": "^3.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-spring": "^8.0.27",
-    "styled-components": "^5.2.1"
+    "react-spring": "^9.2.4",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^17.0.1",
     "copy-webpack-plugin": "^6.4.1",
     "gm": "1.23.1",
-    "image-size": "^0.9.3",
+    "image-size": "^1.0.0",
     "jpeg-exif": "^1.1.4",
-    "luxon": "^1.25.0",
+    "luxon": "^2.0.1",
     "strip-pragma-loader": "^1.0.0",
     "tinify": "^1.6.0-beta.2"
   }
