--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "cesium": "^1.76.0",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "cesium": "^1.83.0",
     "gatsby": "^3.9.1",
     "gatsby-plugin-google-analytics": "3.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-json": "^3.9.0",
+    "https-browserify": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-spring": "^9.2.4",
-    "styled-components": "^5.3.0"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "styled-components": "^5.3.0",
+    "util": "^0.12.4"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^6.4.1",
+    "copy-webpack-plugin": "^9.0.1",
     "gm": "1.23.1",
     "image-size": "^1.0.0",
     "jpeg-exif": "^1.1.4",
