--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "assert": "^2.0.0",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-spring": "^9.2.4",
+    "prop-types": "^15.7.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.0",
@@ -29,8 +31,11 @@
     "gm": "1.23.1",
     "image-size": "^1.0.0",
     "jpeg-exif": "^1.1.4",
+    "jsonfile": "^6.1.0",
     "luxon": "^2.0.1",
+    "prettier": "^2.3.2",
     "strip-pragma-loader": "^1.0.0",
-    "tinify": "^1.6.0-beta.2"
+    "tinify": "^1.6.0-beta.2",
+    "webpack": "^5.45.1"
   }
 }
