--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@loadable/component": "^5.15.0",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "cesium": "^1.83.0",
     "gatsby": "^3.9.1",
     "gatsby-plugin-google-analytics": "3.9.0",
+    "gatsby-plugin-loadable-components-ssr": "^3.2.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-json": "^3.9.0",
     "https-browserify": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-spring": "^9.2.4",
-    "prop-types": "^15.7.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^5.3.0",
