--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.32.0",
     "react-spring": "^9.2.4",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
