Enable caching of js files

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -21,6 +21,10 @@ ErrorDocument 404 /404
     Header set Cache-Control "public, max-age=31536000, immutable"
 </FilesMatch>
 
+<FilesMatch "^[^/]*\.js$">
+    Header set Cache-Control "public, max-age=31536000, immutable"
+</FilesMatch>
+
 Redirect 301 /start https://www.dplate.de
 Redirect 301 /sbanleit.html https://www.dplate.de/games/schiffbruch
 Redirect 301 /schiffbruch https://www.dplate.de/games/schiffbruch
