--- a/package.json
+++ b/package.json
@@ -6,39 +6,39 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
-    "@loadable/component": "^5.15.0",
+    "@loadable/component": "^5.15.2",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
-    "cesium": "^1.84.0",
-    "gatsby": "^3.11.0",
-    "gatsby-plugin-google-analytics": "3.11.0",
-    "gatsby-plugin-loadable-components-ssr": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^4.11.0",
-    "gatsby-plugin-styled-components": "^4.11.0",
-    "gatsby-source-filesystem": "^3.11.0",
-    "gatsby-transformer-json": "^3.11.0",
+    "cesium": "^1.93.0",
+    "gatsby": "^4.14.1",
+    "gatsby-plugin-google-analytics": "4.14.0",
+    "gatsby-plugin-loadable-components-ssr": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^5.14.0",
+    "gatsby-plugin-styled-components": "^5.14.0",
+    "gatsby-source-filesystem": "^4.14.0",
+    "gatsby-transformer-json": "^4.14.0",
     "https-browserify": "^1.0.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^8.32.0",
-    "react-spring": "^9.2.4",
+    "react-intersection-observer": "^9.1.0",
+    "react-spring": "^9.4.5",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.5",
     "util": "^0.12.4"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^11.0.0",
     "gm": "1.23.1",
-    "image-size": "^1.0.0",
+    "image-size": "^1.0.1",
     "jpeg-exif": "^1.1.4",
     "jsonfile": "^6.1.0",
-    "luxon": "^2.0.1",
-    "prettier": "^2.3.2",
+    "luxon": "^2.4.0",
+    "prettier": "^2.6.2",
     "strip-pragma-loader": "^1.0.0",
-    "tinify": "^1.6.0-beta.2",
-    "webpack": "^5.49.0"
+    "tinify": "^1.6.1",
+    "webpack": "^5.72.1"
   }
 }
