Add Rappenloch report

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -52,4 +52,6 @@ Redirect 301 /alpine/airolo https://www.dplate.de/alpine/gotthard
 Redirect 301 /photos/airolo https://www.dplate.de/photos/gotthard
 Redirect 301 /alpine/hoher-freschen https://www.dplate.de/alpine/laterns
 Redirect 301 /photos/hoher-freschen https://www.dplate.de/photos/laterns
+Redirect 301 /alpine/hohekugel https://www.dplate.de/alpine/ebnit
+Redirect 301 /photos/hohekugel https://www.dplate.de/photos/ebnit
 redirectMatch  301 ^/photos$ https://www.dplate.de/showcase
