--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "assert": "2.0.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "browserify-zlib": "0.2.0",
     "cesium": "1.100.0",
     "gatsby": "5.3.2",
@@ -19,7 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "9.4.1",
-    "react-spring": "9.6.0",
+    "react-spring": "9.6.1",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
     "styled-components": "5.3.6",
