--- a/static/.htaccess
+++ b/static/.htaccess
@@ -17,7 +17,7 @@ RewriteRule ^photos/(.*)/.*_(.*)\.jpg$ photos/$1/$2.jpg
 
 ErrorDocument 404 /404
 
-<FilesMatch "\.(jpg|png|svg|ico)$">
+<FilesMatch "\.(jpg|png|webp|svg|ico)$">
     Header set Cache-Control "public, max-age=31536000, immutable"
 </FilesMatch>
 
