--- a/package.json
+++ b/package.json
@@ -7,36 +7,41 @@
   },
   "dependencies": {
     "assert": "2.0.0",
-    "babel-plugin-styled-components": "2.0.7",
+    "babel-plugin-styled-components": "2.1.4",
     "browserify-zlib": "0.2.0",
     "cesium": "1.100.0",
-    "gatsby": "5.3.2",
-    "gatsby-plugin-google-gtag": "5.9.0",
-    "gatsby-plugin-styled-components": "6.3.0",
-    "gatsby-source-filesystem": "5.3.1",
-    "gatsby-transformer-json": "5.3.0",
+    "gatsby": "5.14.1",
+    "gatsby-plugin-google-gtag": "5.14.0",
+    "gatsby-plugin-styled-components": "6.14.0",
+    "gatsby-source-filesystem": "5.14.0",
+    "gatsby-transformer-json": "5.14.0",
     "https-browserify": "1.0.0",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intersection-observer": "9.4.1",
-    "react-spring": "9.6.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-intersection-observer": "9.15.1",
+    "react-spring": "9.7.5",
     "stream-browserify": "3.0.0",
     "stream-http": "3.2.0",
-    "styled-components": "5.3.6",
-    "url": "0.11.0",
+    "styled-components": "6.1.15",
+    "url": "0.11.4",
     "util": "0.12.5"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "11.0.0",
+    "copy-webpack-plugin": "12.0.2",
     "gm": "1.25.0",
-    "image-size": "1.0.2",
+    "image-size": "1.2.0",
     "jpeg-exif": "1.1.4",
     "jsonfile": "6.1.0",
-    "luxon": "3.1.1",
-    "prettier": "2.8.1",
+    "luxon": "3.5.0",
+    "prettier": "3.4.2",
     "strip-pragma-loader": "1.0.1",
     "tinify": "1.7.1",
-    "webpack": "5.75.0"
+    "webpack": "5.97.1"
+  },
+  "overrides": {
+    "react-server-dom-webpack@0.0.0-experimental-c8b778b7f-20220825": {
+      "react": "^18.0.0"
+    }
   }
 }
